fix meeting variable issue + home page overflow

--- a/src/Static/ClassroomCard.css
+++ b/src/Static/ClassroomCard.css
@@ -10,7 +10,6 @@
     margin-top: 30px;
     padding: 10px;
     box-shadow: 1px 2px 5px rgba(0, 0, 0, 0.2);
-    margin-left: 2dvw;
 }
 .navlinkcustom:hover{
     background-color: rgba(0, 0, 0, 0.05);
